# RayTracer

./: CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  raytracer
api/display/: ImageRendering.hpp
api/display/render/: PPM.hpp
api/math/: Axis.hpp  MathStandard.hpp  Point3D.hpp  Rectangle3D.hpp  Vector.hpp
core/src/: Launcher.cpp  RaytracerApplication.cpp  RaytracerApplication.hpp
core/src/config/: Configuration.cpp  Configuration.hpp
core/src/factories/: ObjectFactory.cpp  ObjectFactory.hpp
core/src/math/: Point3D.cpp  Rectangle3D.cpp
core/src/raytracing/: Color.cpp  Color.hpp  Ray.cpp  Ray.hpp
core/src/raytracing/material/: Dielectric.cpp  Dielectric.hpp  Diffuse.cpp  Diffuse.hpp  DiffuseLight.cpp  DiffuseLight.hpp  Material.hpp  Metal.cpp  Metal.hpp
core/src/raytracing/primitives/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.hpp  BoundingVolHierarchy.cpp  BoundingVolHierarchy.hpp  Box.cpp  Box.hpp  Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  Hittable.hpp  HittableList.cpp  HittableList.hpp  MovingSphere.cpp  MovingSphere.hpp  PlaneXY.cpp  PlaneXY.hpp  PlaneXZ.cpp  PlaneXZ.hpp  PlaneYZ.cpp  PlaneYZ.hpp  (+2 more)
core/src/scene/: Camera.cpp  Camera.hpp  SceneBuilder.cpp  SceneBuilder.hpp  randomScene.cpp
docs/: package-lock.json  package.json
docs/docs/: 404.html  index.html
docs/docs/guide/: camera.html  image.html  index.html  materials.html  primitives.html  textures.html
docs/src/: index.md
docs/src/.vuepress/: config.js
docs/src/guide/: camera.md  createPrimitive.md  image.md  materials.md  primitives.md  textures.md
doxy/html/: annotated.html  classes.html  dir_0188a3e6da905bc60aceb35bf790b8c9.html  dir_1d6fb1741d8631f487daaa8adcae4ebb.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_44fd3b6d3fd11f7f4c161e83d3274c51.html  dir_4f921c2bb522526c6f78c7e0b9c54478.html  dir_502366a9097a2511a078cfe214c30232.html  dir_5ff00cef60b075eb543598c137a6cccc.html  dir_6f83027881c8902aaea09a9a1881c9e2.html  dir_90fd98a0ba30abf7a6068a44995d2d6b.html  dir_a5443cea0ccad4439fc9e4e23e942fa9.html  dir_bcde3014b42b99057a0317466ac131a4.html  dir_d2763d1c15bea67bd9789fc7acb0e623.html  dir_d8a47095f71c67f2e73a7772ef092f2e.html  dir_e42f922d127a3065d1ce8eed20cac6f9.html  dir_f5f9f363173c5d55acb039544b974820.html  files.html  hierarchy.html  index.html  inherit_graph_0.md5  inherit_graph_1.md5  inherit_graph_10.md5  inherit_graph_11.md5  inherit_graph_12.md5  inherit_graph_13.md5  inherit_graph_14.md5  inherit_graph_15.md5  inherit_graph_16.md5  inherit_graph_17.md5  inherit_graph_18.md5  inherit_graph_19.md5  inherit_graph_2.md5  inherit_graph_20.md5  inherit_graph_3.md5  inherit_graph_4.md5  inherit_graph_5.md5  inherit_graph_6.md5  inherit_graph_7.md5  inherit_graph_8.md5  (+2 more)
doxy/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  pages_0.js  searchdata.js
scenes/: basic.cfg  light.cfg  primitives.cfg
(+179 files in other folders)
